linkin: cambios agregar materias

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Gestor de asesorias</string>
     <string name="title_activity_alta_alumno">AltaAlumnoActivity</string>
-    <string name="inputAlumnoQr">Lectura QR</string>
+    <string name="inputAlumnoQr">QR</string>
     <string name="reportealumnos">Reporte Alumno</string>
     <string-array name="horas">
 
