linkin agregando materias dinamicamente

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
         <item>Inglés</item>
         <item>Psicología</item>
         <item>Estadistica</item>
-        <item>Pensamiento Analitico</item>
+        <item>Pensamiento Analítico</item>
 
 
     </string-array>
