--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,16 +7,16 @@
 
 
         <item>horas</item>
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-        <item>5</item>
-        <item>6</item>
-        <item>7</item>
-        <item>8</item>
-        <item>9</item>
         <item>10</item>
+        <item>20</item>
+        <item>30</item>
+        <item>40</item>
+        <item>50</item>
+        <item>60</item>
+        <item>70</item>
+        <item>80</item>
+        <item>90</item>
+        <item>100</item>
 
     </string-array>
 
@@ -47,6 +47,9 @@
     <string name="title_activity_alta_maestros">AltaMaestrosActivity</string>
     <string name="buscar">buscar</string>
     <string name="action_settings">Settings</string>
+    <string name="registro">alta de alumno</string>
+    <string name="paquete_registro">alta de paquete</string>
+    <string name="registrar">Registrar</string>
     <string-array name="nivel">
         <item>Primaria</item>
         <item>Secundaria</item>
