--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,6 @@
     <string name="action_settings">Settings</string>
     <string name="paquete_registro">Compra de paquete</string>
     <string name="registrar">Registrar</string>
-    <string name="elegirMaestro">Elegir Maestro</string>
     <string-array name="nivel">
         <item>Primaria</item>
         <item>Secundaria</item>
@@ -70,6 +69,12 @@
         <item>fecha</item>
         <item>nivel</item>
     </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="salir">registrar salida</string>
+    <string name="entrar">registrar entrada</string>
+    <string name="horario">Horario</string>
 
 
 </resources>
